Fixed checkbox alignment

--- a/DocApproval/static/less/datatables_bundle.less
+++ b/DocApproval/static/less/datatables_bundle.less
@@ -11,4 +11,10 @@ div.dataTables_wrapper {
   div.dataTables_length {
     float: right;
   }
+
+  table.dataTable {
+    input[type='checkbox'] {
+      vertical-align: top;
+    }
+  }
 }
